--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/contracts": "^4.8.0",
-    "hardhat": "^2.12.2"
+    "dotenv": "^16.0.3",
+    "hardhat": "^2.12.2",
+    "http-server": "^14.1.1"
   }
 }
